# sdl-vita-test

./: CMakeLists.txt  README.md  sdl.code-workspace
assets/gimp/: bg.xcf  menu.xcf  platform.xcf  player.xcf
manualbuild/: Makefile  Makefile.vita
scripts/: makefilelist.py
src/: level.cpp  level.h  main.cpp  menu.cpp  menu.h  util.cpp  util.h
vitabuild/: VitaApp.vpk
